[package]
name = "OnlineLLM"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.8.0"
actix-cors = "0.6"
serde_json = "1.0"
select = "0.6.0"
anyhow = "1.0.40"
scraper = "0.12"
urlencoding = "2.1.2"
url = "2.4.0"